# advanced-python-development

./: LICENSE.txt  README.md
Ch01/: figure01-01-fizzbuzz.ipynb  figure01-04-versioninfo.ipynb  figure01-05-ip-address.ipynb  figure01-06-ip-address-joined.ipynb  figure01-07-multiple-datapoints.ipynb  figure01-08-temperature_and_humidity_remote.ipynb  figure01-09-temperature_and_humidity_local.ipynb  listing01-01-fizzbuzz.py  listing01-02-fizzbuzz_blank_lines.py  listing01-03-fizzbuzz_with_breakpoint.py  listing01-04-converted.py  listing01-05-serverstatus.py  listing01-06-sensors_argv.py  listing01-07-sensors_argparse.py  listing01-08-sensors_click.py  listing01-09-sensors_click_bold.py  listing01-10-final-sensors.py
Ch02/: listing02-01-temperature_sensor.py  listing02-02-temperature_conversion.ipynb  listing02-03-temperature_conversion_invalid_types.ipynb  listing02-04-temperature.py  listing02-07-sensors.py  listing02-09-sensors,cover.py
Ch03/: listing03-01-setup.cfg  listing03-02-indexserver.service  listing03-03-cheatsheet.md  listing03-04-cheatsheet.rst  listing03-05-readme.md
Ch04/: listing04-01-solar_prototype.ipynb
Ch04/apd.sensors-chapter04-click-subcommands/: .pre-commit-config.yaml  setup.cfg
Ch04/apd.sensors-chapter04-click-subcommands/src/apd/sensors/: __init__.py  sensors.py
Ch04/apd.sensors-chapter04-click-subcommands/tests/: test_pythonversion.py  test_sensors.py
Ch04/apd.sensors-chapter04-ex01/: README.md  setup.cfg
Ch04/apd.sensors-chapter04-ex01/src/apd/sensors/: cli.py  sensors.py
Ch04/apd.sensors-chapter04-ex01/tests/: test_dht.py  test_ipaddresses.py  test_ramusage.py  test_sensors.py
Ch04/apd.sensors-chapter04/plugins/apd.sunnyboy_solar/: setup.cfg
Ch04/apd.sensors-chapter04/plugins/apd.sunnyboy_solar/src/apd/sunnyboy_solar/: sensor.py
Ch05/: listing05-01-helloworld.py  listing05-02-helloworld-incremental.py  listing05-03-apd_sensors_wsgi.py  listing05-08-typing.py
Ch06/: chapter06-ex1-generators.py  listing06-03-descriptors.py
Ch07/: listing07-01-nbioexample.py  listing07-02-increment_dis.py  listing07-05-threadpools-and-queues.py  listing07-06-reentrantlocks.py  listing07-07-conditions.py  listing07-08-barriers.py  listing07-09-events.py  listing07-10-semaphore.py  listing07-11-async-increment.py  listing07-12-list_of_awaitables.py  listing07-13-awaitable_list.py  listing07-14-async_for.py  listing07-15-awaitable_gather.py  listing07-16-async_increment_unsafe.py  listing07-17-async_increment_safe.py
Ch07/apd.aggregation-chapter07-aio/: LICENCE  Pipfile  setup.cfg
Ch07/apd.aggregation-chapter07-aio/src/apd/aggregation/: collect.py
Ch08/: listing08-01-httpfixture.py  listing08-02-config_fixture.py  listing08-03-mocking.py  listing08-04-manual_mocks.py  listing08-05-apdaggregation_mocks.py  listing08-06-classic_sqlalchemy.py  listing08-07-datapoint_with_asdict.py  listing08-08-database_integration.py  listing08-09-full_datapoint.py  listing08-10-comparator.py  listing08-11-django.py  listing08-12-migration.py  listing08-13-env.py
Ch09/: listing09-01-query_contextmanager.py  listing09-02-getdata.py  listing09-03-count-datapoints.py  listing09-04-plot.py  listing09-05-filtering.py  listing09-06-multiplot.py  listing09-07-more_filtering.py  listing09-08-plot_with_helpers.py  listing09-09-async_groupby.py  listing09-10-new_get_data.py  listing09-11-database_fixtures.py  listing09-12-parameterisation.py  listing09-13-configs.py  listing09-14-two_plots.py  listing09-15-temperature_cleaner.py  listing09-16-chart_grid.py  listing09-17-sync_from_async.py  listing09-18-wrap_coroutine.py  listing09-19-interactable.py  listing09-20-genericised_plots.py  listing09-21-contours_and_scatter.py  listing09-22-get_data_config.py  listing09-23-generic_config.py  listing09-24-custom_map_chart.py
Ch10/: chapter10-yappi.ipynb  listing10-01-profiling_wrapper.py  listing10-02-profile_with_yappi.py  listing10-03-memory_profiler.py  listing10-04-sql_filtering.py  listing10-05-python_filtering.py  listing10-06-consume_iterators.py  listing10-07-consume_iterators_singledispatch.py  listing10-08-typed_conversion.py  listing10-09-fahrenheit_chart.py  listing10-10-minimal_cache.py
Ch11/: listing11-01-get_with_default.py  listing11-02-new_exceptions.py  listing11-03-retry_sensor.py  listing11-04-exception_with_metadata.py  listing11-05-dht_baseclass.py  listing11-06-cli_exceptions.py  listing11-07-failing_test_sensor.py  listing11-08-compatibility_test.py  listing11-09-mock-failingsensor.py  listing11-10-deprecationwarning.py  listing11-11-test_for_deprecation_warnings.py  listing11-12-logging_config.py  listing11-13-log_adapter.py  listing11-14-log_factory.py  listing11-15-log_filter.py  listing11-16-log_handler.py  listing11-17-log_config.ini  listing11-18-local_data_cache.py  listing11-19-local_data_cache_cli.py  listing11-20-v3_api_additions.py
Ch11/apd.aggregation-chapter11/: setup.cfg
Ch11/apd.aggregation-chapter11/src/apd/aggregation/: cli.py  database.py
Ch11/apd.aggregation-chapter11/tests/: test_analysis.py  test_cli.py
Ch11/apd.sensors-chapter11-ex01/: Pipfile  setup.cfg
Ch11/apd.sensors-chapter11-ex01/src/apd/sensors/: database.py
Ch11/apd.sensors-chapter11-ex01/src/apd/sensors/wsgi/: __init__.py  v21.py
Ch11/apd.sensors-chapter11-ex01/tests/: test_ipaddresses.py  test_sensors.py  test_utils.py
Ch12/: listing12-01-clean_passthrough.py  listing12-02-sum_ints.py  listing12-03-process_own_output.py  listing12-04-wrapper_generator.py  listing12-05-enhanced_generator.py  listing12-06-mean_finder.py  listing12-07-wrap_enhanced_generator.py  listing12-08-shared_state_by_return.py  listing12-09-mean_with_enhanced.py  listing12-10-coroutine_and_queue.py  listing12-11-dataprocessor.py  listing12-12-trigger_and_action.py  listing12-13-valuethreshold.py  listing12-14-webhook.py  listing12-15-loggingaction.py  listing12-16-get_data_repeatedly.py  listing12-17-actions_cli.py  listing12-18-config.py  listing12-19-dataprocessor_stats.py  listing12-20-stats_signals.py  listing12-21-better_stats_signals.py  listing12-22-time_taken_callback.py  (+2 more)
(+216 files in other folders)
