[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 88

[metadata]
name = apd.sensors
version = attr: apd.sensors.VERSION
description = APD Sensor package
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords = iot
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package-dir =
    =src
packages = find:
install_requires =
    psutil
    click
    adafruit-circuitpython-dht ; 'arm' in platform_machine

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  sensors = apd.sensors.sensors:sensors
