[mypy]
namespace_packages = True
mypy_path = src
plugins = sqlmypy

[mypy-alembic]
ignore_missing_imports = True

[mypy-alembic.config]
ignore_missing_imports = True

[mypy-alembic.script]
ignore_missing_imports = True

[mypy-alembic.runtime.environment]
ignore_missing_imports = True

[mypy-matplotlib]
ignore_missing_imports = True

[mypy-matplotlib.axes._base]
ignore_missing_imports = True

[mypy-matplotlib.figure]
ignore_missing_imports = True

[mypy-matplotlib.pyplot]
ignore_missing_imports = True

[mypy-IPython.core]
ignore_missing_imports = True

[mypy-yappi]
ignore_missing_imports = True

[mypy-pint]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[flake8]
max-line-length = 120
ignore = E501

[metadata]
name = apd.aggregation
version = attr: apd.aggregation.VERSION
description = A programme that queries apd.sensor endpoints and aggregates their results.
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords =
license = BSD
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    sqlalchemy
    aiohttp
    pint
    psycopg2
    alembic
    click


[options.extras_require]
jupyter = ipywidgets
yappi = yappi

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  collect_sensor_data = apd.aggregation.cli:collect_sensor_data
  sensor_deployments = apd.aggregation.cli:deployments
