[mypy]
namespace_packages = True
mypy_path = src
plugins = sqlmypy

[mypy-psutil]
ignore_missing_imports = True

[mypy-alembic]
ignore_missing_imports = True

[mypy-adafruit_dht]
ignore_missing_imports = True

[mypy-board]
ignore_missing_imports = True

[mypy-flask_sqlalchemy]
ignore_missing_imports = True

[mypy-pint]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-webtest]
ignore_missing_imports = True

[flake8]
max-line-length = 88

[metadata]
name = apd.sensors
version = attr: apd.sensors.VERSION
description = APD Sensor package
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords = iot
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    psutil
    click
    pint
    adafruit-circuitpython-dht ; 'arm' in platform_machine

[options.package_data]
apd.sensors = py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  sensors = apd.sensors.cli:show_sensors
apd.sensors.sensors =
  PythonVersion = apd.sensors.sensors:PythonVersion
  IPAddresses = apd.sensors.sensors:IPAddresses
  CPULoad = apd.sensors.sensors:CPULoad
  RAMAvailable = apd.sensors.sensors:RAMAvailable
  ACStatus = apd.sensors.sensors:ACStatus
  Temperature = apd.sensors.sensors:Temperature
  RelativeHumidity = apd.sensors.sensors:RelativeHumidity

[options.extras_require]
webapp = flask
scheduled =
  sqlalchemy
  alembic
storedapi =
  flask-sqlalchemy
  python-dateutil
  