[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 88

[metadata]
name = apd.sunnyboy_solar
version = attr: apd.sunnyboy_solar.VERSION
description = APD Sensor for reading data from Sunnyboy inverters
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords = iot solar
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package-dir =
    =src
packages = find:
install_requires =
    apd.sensors
    
[options.packages.find]
where = src

[options.entry_points]
apd.sensors.sensors =
  SolarCumulativeOutput = apd.sunnyboy_solar.sensor:SolarCumulativeOutput
